--- a/section5/5-13.html
+++ b/section5/5-13.html
@@ -26,6 +26,6 @@
     <h4 id="title4">웹프로그래밍</h4>
     <h5 id="title5">웹퍼블리쉬</h5>
     <h6 id="title6">제이쿼리</h6>
-    h$*6#title
+    <!-- h$*6#title -->
 </body>
 </html>
