--- a/section7/7-7.html
+++ b/section7/7-7.html
@@ -15,6 +15,7 @@
             height: 120px;
             background-color: burlywood;
             float: left;
+            border: 2px solid black;
         }
         .login{
             width: 333px;
@@ -22,11 +23,20 @@
             float: left;
             background-color: beige;
             margin-left: 8px;
+            border: 2px solid black;
+        }
+        .main{
+            width: 1089px;
+            height: 124px;
+            background-color: gray;
+            margin: 0 auto;
         }
     </style>
 </head>
 <body>
+    <div class="main">
     <div class="banner">배너영역</div>
     <div class="login">로그인</div>
+</div>
 </body>
 </html>
