--- a/section9/9-7.html
+++ b/section9/9-7.html
@@ -8,6 +8,7 @@
     <style>
         h1:hover{
             color: red;
+            background-color: black;
         }
         h2:active{
             color: blue;
