--- a/section3/3-6.html
+++ b/section3/3-6.html
@@ -9,13 +9,15 @@
 <body>
     <pre><h1>Imagine</h1></pre>
     <pre>
-Imagine
-Imagine there's no heaven It's easy if you try 
-No hell below us Alone us only sky Imagine all the people
+    Imagine
+    Imagine there's no heaven It's easy if you try 
+    No hell below us Alone us only sky Imagine all the people
     </pre>
 <p> 
+<pre>    
     Imagine
     Imagine there's no heaven It's easy if you try 
     No hell below us Alone us only sky Imagine all the people</p>
+</pre>
 </body>
 </html>
