--- a/section10/10-8.html
+++ b/section10/10-8.html
@@ -7,9 +7,13 @@
     <title>Document</title>
     <style>
         div{
-            width: 300px;
-            height: 200px;
-            background: linear-gradient(45deg,#398235,#ffffff);
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            border: 3px solid transparent;
+            background-image: linear-gradient(#fff,#fff),linear-gradient(to top right, red,orange);
+            background-origin: border-box;
+            background-clip: padding-box,border-box;
         }
         /* 그레이디언트 - 색상각도, 색상1, 색상2 */
     </style>
