--- a/section18/test3.html
+++ b/section18/test3.html
@@ -6,7 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .container{
+        height: 500px;
+        width: 500px;
+        background-color: gray;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .ani-wrapper{
+        width: 100px;
+        height: 100px;
+    }
+    .circle{
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        background-color: white;
+        border-radius: 50%;
+        animation: ping 2s infinite;
+    }
+    .circle:nth-child(2) {
+        animation-delay: 0.2;
+    }
+    .circle:nth-child(3) {
+        animation-delay: 0.4s;
+    }
+    @keyframes ping {
+        from{
+            opacity: 1;
+            transform: scale(0);
+        }
+        to{
+            opacity: 0;
+            transform: scale(1);
+        }
+        
+    }
+</style>
 <body>
-    
+    <div class="container">
+        <div class="ani-wrapper">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+    </div>
 </body>
 </html>
