--- a/section20/20-7.html
+++ b/section20/20-7.html
@@ -53,9 +53,9 @@
         #wrap div{ 
             width: 20%;
         }
-        /* #wrap div:last-child{
+        #wrap div:last-child{
             width: 20%;
-        } */
+        }
     }
 </style>
 <body>
