--- a/Discord/test.html
+++ b/Discord/test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
     <link rel="stylesheet" href="./CSS/reset.css">
-    <!-- <link rel="stylesheet" href="./CSS/discord.css"> -->
+    <link rel="stylesheet" href="./CSS/discord.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
                <nav class="user-nav">
                    <a href="//feedback.discord.com/">피드백</a>
                    <div class="language">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="dropdown-chevron-icon">
+                    한국어<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="dropdown-chevron-icon">
                         <path fill="none" stroke="currentColor" stroke-linecap="round" d="M3 4.5l2.6 2.6c.2.2.5.2.7 0L9 4.5"/>
                       </svg>
                    </div>
@@ -38,6 +38,7 @@
                         <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"/>
                         <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
                       </svg>
+                    <input type="text" placeholder="검색">
                 </div>
             <section class="intro">
                 <h2>도움이 필요하신가요? 저희가 도와드리겠습니다</h2>
@@ -47,13 +48,16 @@
             </section>
             <section class="category">
                 <ul class="flex-container">
+  
                     <a href="https://support.discord.com/hc/ko/categories/115000193752">
-                        <li class="notice">
-                            <h2>공지 사항</h2>
-                            <hr />
-                            <h3>들어보세요, 무언가 심상치 않은 일이 벌어지고 있습니다.</h3>
-                        </li>
+                      <li class="notice">
+                        <h2>공지 사항</h2>
+                        <img src="./img/1bd76d1fd516f8dacd3c7422a8ceb929ef2502d9.svg" alt="">
+                        <hr />
+                        <h3>들어보세요, 무언가 심상치 않은 일이 벌어지고 있습니다.</h3>
+                      </li>
                     </a>
+                 
 
                     <a href="https://support.discord.com/hc/ko/categories/200404398"> 
                         <li class="interface">
