--- a/Discord/test.html
+++ b/Discord/test.html
@@ -18,14 +18,15 @@
         </h2>
             <div class="nav-wrapper">
                <nav class="user-nav">
-                   <a href="//feedback.discord.com/">피드백</a>
-                   <div class="language">
-                    한국어<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="dropdown-chevron-icon">
-                        <path fill="none" stroke="currentColor" stroke-linecap="round" d="M3 4.5l2.6 2.6c.2.2.5.2.7 0L9 4.5"/>
-                      </svg>
-                   </div>
-                   <a href="https://support.discord.com/hc/ko/requests/new">문의 등록</a>
-               </nav>
+
+                   <a href="//feedback.discord.com/">피드백</a></li>
+                   <a href="#">한국어
+                     <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="dropdown-chevron-icon">
+                       <path fill="none" stroke="currentColor" stroke-linecap="round" d="M3 4.5l2.6 2.6c.2.2.5.2.7 0L9 4.5"/>
+                    </svg>
+                    </a>
+                    <a href="https://support.discord.com/hc/ko/requests/new">문의 등록</a>
+                  </nav>
             </div>
             <a href="#" class="login">로그인</a>
             
