--- a/BAND/band.html
+++ b/BAND/band.html
@@ -58,7 +58,7 @@
             <ul class="intro-list">
                 <li class="intro-container">
                     <div class="intro-image">
-                            <img src="/img/img_seo01.jpg" alt="">
+                            <img src="./img/img_seo01.jpg" alt="">
                     </div>
                     <div class="intro-explanation">
                         <h3>어떤 모임이라도!</h3>
@@ -67,7 +67,7 @@
                 </li>
                 <li class="intro-container">
                     <div class="intro-image">
-                            <img src="/img/img_seo02.jpg" alt="">
+                            <img src="./img/img_seo02.jpg" alt="">
                     </div>
                     <div class="intro-explanation">
                         <h3>모임에 딱 맞는 기능들</h3>
@@ -76,7 +76,7 @@
                 </li>
                 <li class="intro-container">
                     <div class="intro-image">
-                            <img src="/img/img_seo03.jpg" alt="">
+                            <img src="./img/img_seo03.jpg" alt="">
                     </div>
                     <div class="intro-explanation">
                         <h3>내가 원하는 모임 찾기</h3>
